Tests/CompilerTests/negative/ambiguous-implementation.hylo
//! no-std

trait P { fun f() }

given Void: P {
  fun f() {}
  fun f() {}
}
