Tests/CompilerTests/negative/ambiguous-implementation.expected
negative/ambiguous-implementation.hylo:5.1-6: error: ambiguous implementation of 'f'
given Void: P {
~~~~~
